--- a/crate/multiworld/Cargo.toml
+++ b/crate/multiworld/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 [dependencies]
 async-recursion = "0.3"
 chrono = "0.4"
+derivative = "2"
+rustls = "0.19"
+webpki = "0.21"
+webpki-roots = "0.21"
 
 [dependencies.async-proto]
 version = "0.8.2"
